# swagger_output.json
@@ -152,7 +152,7 @@
         }
       }
     },
-    "/user/{nim}": {
+    "/user/get-user-by-nim/{nim}": {
       "get": {
         "tags": [
           "User"
@@ -165,6 +165,38 @@
             "required": true,
             "type": "string"
           },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/resend-verification": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint untuk mengirim ulang OTP",
+        "parameters": [
           {
             "name": "authorization",
             "in": "header",
@@ -228,38 +260,6 @@
             "apiKeyAuth": []
           }
         ]
-      }
-    },
-    "/user/resend-verification": {
-      "get": {
-        "tags": [
-          "User"
-        ],
-        "description": "Endpoint untuk mengirim ulang OTP",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
       }
     },
     "/user/forgot-password": {
@@ -541,6 +541,9 @@
           },
           "403": {
             "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -576,6 +579,9 @@
           },
           "403": {
             "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
